# Milk

./: .gitignore  BUILD_VS2013x64.bat  CMakeLists.txt  readme.md
data/image/: helipad.hdr
dependencies/include/FreeImage/: FreeImage.h
dependencies/lib/x64/: FreeImage.lib  glfw3.lib
doc/: PBR_material.html  PBR_material.md  PBR_material1.md
include/: File.hpp  GLGraphicsSystem.hpp  GLProgram.hpp  GLTextureUtility.hpp  IPrefilter.hpp  Image.hpp  Prefilter.hpp
shaders/: cubemap.vs  equirectangularToCubemap.fs  gltfPrefilterDiffuse.fs  gltfPrefilterSpecular.fs
src/: GLGraphicsSystem.cpp  Image.cpp  Prefilter.cpp  main.cpp
